# pyz3

./: .gdbinit  .gitignore  .lldbinit  .pre-commit-config.yaml  .pypirc.template  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  FORK_NOTICE.md  IMPROVEMENTS.md  Makefile  NUMPY_INTEGRATION.md  PHASE_3_4_SUMMARY.md  PROJECT_IMPROVEMENTS.md  README.md  README_DOCS.md  RENAME_SUMMARY.md  SETUP_CHECKLIST.md  TODO.md  TROUBLESHOOTING.md  build.zig  build.zig.zon  bump_version.sh  codecov.yml  mkdocs.yml  pyconf.dummy.zig  pyproject.toml  pytest.build.zig  pyz3.build.zig  requirements-dist.txt  requirements.txt  run_all_tests.sh  versions.json
.github/workflows/: build-wheels.yml  ci.yml  publish.yml  test-matrix.yml  test.yml
0.2/: 404.html
0.2/DISTRIBUTION_QUICKSTART/: index.html
0.2/REPOSITORY_STRUCTURE/: index.html
0.2/VERSION_MANAGEMENT/: index.html
0.2/getting_started/: index.html
0.3/: index.html
0.3/CLEANUP_SUMMARY/: index.html
0.3/CLI/: index.html
0.3/DEPENDENCY_MANAGEMENT/: index.html
0.3/FORK_NOTICE/: index.html
0.3/QUICK_REFERENCE/: index.html
0.3/RENAME_SUMMARY/: index.html
0.3/ROADMAP/: index.html
0.3/development/: index.html
0.3/distribution/: index.html
0.3/guide/: index.html
0.5/QUICK_REFERENCE/: index.html
0.5/REPOSITORY_STRUCTURE/: index.html
0.5/VERSION_MANAGEMENT/: index.html
0.5/guide/: index.html
0.6/: 404.html
0.6/CLEANUP_SUMMARY/: index.html
0.7/: index.html
benchmark/: bench_native_collections.py
docs/: CLI.md  COMPATIBILITY.md  COMPLETE_GUIDE.md  C_CPP_INTEGRATION.md  DOCUMENTATION_INDEX.md  FORK_NOTICE.md  NATIVE_COLLECTIONS_IMPLEMENTATION.md  NEW_FEATURES.md  OPAQUE_STATE_GUIDE.md  OPTIMIZATIONS.md  PYSEQUENCE_MIXIN.md  QUICK_REFERENCE.md  README.md  RENAME_SUMMARY.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  TODO_ANALYSIS_INSTALL_DIR.md  distribution.md  getting_started.md  index.md
example/: args_types.zig  async_await.zig  buffers.zig  c_integration.pyi  c_integration.zig  c_math_helper.c  c_math_helper.h  classes.zig  code.zig  debugging.zig  exceptions.zig  fastpath_bench.pyi  fastpath_bench.zig  functions.zig  gil.zig  gil_bench.pyi  gil_bench.zig  hello.zig  iterators.zig  leak_detection.zig  list_conversion_example.zig  memory.zig  modules.zig  native_collections_example.pyi  native_collections_example.zig  new_container_types.pyi  new_container_types.zig  new_types.pyi  new_types.zig  numpy_capi_example.zig  numpy_example.pyi  numpy_example.zig  opaque_state.zig  operators.zig  pytest.zig  result_types.zig  simd_example.pyi  simd_example.zig  simple_math.zig
examples/: sequence_example.zig
pyZ3-template/: .gitignore  CLEANUP_SUMMARY.md  CONVERSION_SUMMARY.md  QUICKSTART.md  README.md  TEMPLATE_RENAME_SUMMARY.md  TEMPLATE_STRUCTURE.md  USAGE.md  cookiecutter.json  validate_template.py
pyz3/: __init__.py  __init__.pyi  __main__.py  auto_stubs.py  benchmark.py  build.py  buildzig.py  config.py  config.pyi  debug.py  deploy.py  deps.py  develop.py  diagnostics.py  errors_enhanced.py  generate_stubs.py  import_hook.py  init.py  logging_config.py  memcheck.py  mmap_utils.py  pytest_plugin.py  security.py  watch.py  wheel.py  zigimport.py
pyz3/src/: ffi.h  (+24 more)
scripts/: build-wheels.sh
test/: conftest.py  helpers.py  test_all_types.py  test_argstypes.py  test_buffers.py  test_buildzig.py  test_c_integration.py  test_classes.py  test_code.py  test_config.py  test_debugging.py  test_deps_errors.py  test_exceptions.py  test_functions.py  test_gil.py  test_hello.py  test_helpers_demo.py  test_init_deploy.py  test_list_conversion.py  test_modules.py  test_new_container_types.py  test_new_features.py  test_new_types.py  test_numpy.py  test_numpy.py.skip  test_opaque_state.py  test_operators.py  test_performance.py  test_resulttypes.py  test_security.py  test_sequence_mixin.py  test_zigimport.py
(+260 files in other folders)
